Bug 1313883 - Allow using multiple decoder devices on non-AMD hardware since they seem to crash less that way. r=dvander